cmake_minimum_required(VERSION 3.30)
project(siege-modules)

add_subdirectory(foundation/siege-platform)
add_subdirectory(foundation/siege-resource)
add_subdirectory(foundation/siege-content)
add_subdirectory(foundation/siege-configuration)
add_subdirectory(foundation/siege-extension)

add_subdirectory(presentation/siege-presentation-2d)
add_subdirectory(presentation/siege-presentation-3d)
add_subdirectory(presentation/siege-presentation-resource)
add_subdirectory(presentation/siege-presentation-audio)
add_subdirectory(presentation/siege-presentation-configuration)
add_subdirectory(presentation/siege-presentation-executable)

add_subdirectory(extension/siege-input-filtration)
add_subdirectory(extension/wsock-over-zero-tier)
add_subdirectory(extension/siege-extension-3space)
add_subdirectory(extension/siege-extension-id-tech)
add_subdirectory(extension/siege-extension-other)

add_subdirectory(installation/siege-installation-dynamix)
add_subdirectory(installation/siege-installation-raven)
add_subdirectory(installation/siege-installation-other)