cmake_minimum_required(VERSION 3.30)
project(siege-modules)

add_subdirectory(platform)
add_subdirectory(content/siege-content-common)
add_subdirectory(content/siege-content-colony-wars)
add_subdirectory(content/siege-content-cyclone)
add_subdirectory(content/siege-content-id-tech)
add_subdirectory(content/siege-content-sword)
add_subdirectory(content/siege-content-mw2)
add_subdirectory(content/siege-content-mw4)
add_subdirectory(content/siege-content-3space)
add_subdirectory(content/siege-content-all)

add_subdirectory(presentation/siege-presentation-2d)
add_subdirectory(presentation/siege-presentation-3d)
add_subdirectory(presentation/siege-presentation-resource)
add_subdirectory(presentation/siege-presentation-audio)
add_subdirectory(presentation/siege-presentation-configuration)
add_subdirectory(presentation/siege-presentation-executable)

add_subdirectory(extension/siege-extension)
add_subdirectory(extension/siege-input-filtration)
add_subdirectory(extension/wsock-over-zero-tier)
add_subdirectory(extension/siege-extension-3space)
add_subdirectory(extension/siege-extension-id-tech)
add_subdirectory(extension/siege-extension-other)

add_subdirectory(installation/siege-installation-dynamix)
add_subdirectory(installation/siege-installation-raven)
add_subdirectory(installation/siege-installation-other)